# ex506_cvu_2018_3

./: CMakeLists.txt
data/: data_cvu_2020_v31_6.txt
lib/inc/: cvu_33_3_line.h  type_A.h
lib/src/: type_A.cpp
main/: main.cpp
test/inc/: read_sentence.h  test_cvu_33_3_line.h  test_type_A.h
test/src/: read_sentence.cpp  test_cvu_133_3_line.cpp  test_cvu_33_3_line.cpp  test_type_A.cpp
